translate need to fix

--- a/angular-simpliKart-admin/src/assets/i18n/en.json
+++ b/angular-simpliKart-admin/src/assets/i18n/en.json
@@ -1,3 +1,5 @@
 {
-    "log_in_your_account": "Log In Your Account Details"
+    "log_in_your_account": "Log In Your Account Details",
+    "forgot_password": "Forgot Password",
+    "log_in": "Log In"
 }
