--- a/angular-simpliKart-admin/src/assets/i18n/en.json
+++ b/angular-simpliKart-admin/src/assets/i18n/en.json
@@ -1,5 +1,24 @@
 {
-    "log_in_your_account": "Log In Your Account Details",
+    "log_in_your_account": "Log In Your Account",
     "forgot_password": "Forgot Password",
-    "log_in": "Log In"
+    "log_in": "Log In",
+    "sign_up": "Sign Up",
+    "dont_account": "Don't Have Seller Account?",
+    "validate": "Validate",
+    "please_enter_the_one_time_password_to_verify_your_account": "Please enter the one time password to verify your account",
+    "email_address": "Email Address",
+    "password": "Password",
+    "submit": "Submit",
+    "cancel": "Cancel",
+    "enter_password": "Enter Password",
+    "password_is_required": "Password is required",
+    "confirm_password_is_required": "Confirm Password is required",
+    "confirm_password_does_not_matched": "Confirm Password does not matched",
+    "confirm_password": "Confirm Password",
+    "enter_confirm_password": "Enter Confirm Password",
+    "update_password": "Update Password",
+    "please_choose_your_password": "Please choose your password",
+    "new_password": "New Password",
+    "new_password_is_required": "New Password is required",
+    "a_code_has_been_sent_to": "A code has been sent to"
 }
